--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Test repository</title>
     <link rel="shortcut icon" href="M-1-HTML/katy-perry.jpg" type="image/x-icon">
     <link rel="stylesheet" href="test.css">
+    <link rel="shortcut icon" href="gulnihal-1.jpg" type="image/x-icon">
 </head>
 <body>
     <h1>This is my test repo</h1>
