--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>This is my test repo</h1>
     <p class="git-work">I have done it without help. If this is your new repo then you have to do 6 things. If the repo is already saved, then you have to do only 3 thigs to push the code into github kaka.</p>
     <p class="external-css">If you have external css file, then remember to link the css file.</p>
-    <p class="image">If you have any images, then try to put them in your working folder, othrwise you have to link the images like folder/image name. Eta jhamelar kaj.</p>
+    <p class="image">If you have any images, then try to put them in your working folder, othrwise you have to link the images like folder/image name. Eta jhamelar kaj onek.</p>
     <img src="gulnihal-1.jpg" alt="gulnihal">
     <img src="katy-perry.jpg" alt="Katy Perry">
     <img src="abigalie-johnson.jpg" alt="Abigalie Johnson">
