--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p class="image">If you have any images, then try to put them in your working folder, othrwise you have to link the images like folder/image name. Eta jhamelar kaj.</p>
     <img src="gulnihal-1.jpg" alt="gulnihal">
     <img src="katy-perry.jpg" alt="Katy Perry">
-    <img src="abigalie-johnson.jpg" alt="Abigalie Johnson">   
+    <img src="abigalie-johnson.jpg" alt="Abigalie Johnson">
+    <img src="abigalie-johnson2.jpg" alt="">   
 </body>
 </html>
