--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <img src="gulnihal-1.jpg" alt="gulnihal">
     <img src="katy-perry.jpg" alt="Katy Perry">
     <img src="abigalie-johnson.jpg" alt="Abigalie Johnson">    
-    <img src="abigalie-johnson2.jpg" alt="">   
+    <img src="abigalie-johnson2.jpg" alt="">
+    <p>can you find the new file</p>
 </body>
 </html>
